--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello </h1>
-    <h2>This is new Bangladesh</h2>
+
+    <header>
+    <nav>
+        <div class="navigation">
+            <div>
+            <h1>BDTSC</h1>
+        </div>
+        <div class="navigation-menu">
+            <ul>
+                <li class="first-border"><a href="">Home</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Videos</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">About Us</a></li>
+            </ul>
+        </div>
+          <div class="menu-toggle" id="mobile-menu">&#9776;</div>
+        </div>
+              
+    </nav>
+    </header>
+    
 </body>
 </html>
